# Multi_agent_system

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: objective.py  run_simulation.py  simulator.py
src/agents/: __init__.py  llama_agent.py
uav_framework/: README.md  cli.py
uav_framework/agents/: __init__.py  base.py  environment_agent.py  evaluator_agent.py  orchestrator.py  planner.py
uav_framework/config/: __init__.py
uav_framework/llm/: __init__.py  llama_interface.py
uav_framework/optimization/: __init__.py  objective.py  optimizers.py
uav_framework/report/: __init__.py  export.py
uav_framework/scripts/: dashboard_app.py
uav_framework/simulation/: __init__.py  environment.py  simulator.py  types.py  uav.py
uav_framework/tests/: __init__.py  test_llm_parser.py  test_llm_planner.py  test_optimization.py  test_orchestrator.py  test_simulator.py
uav_framework/visualization/: __init__.py  dashboard.py
uav_optimizer/: __init__.py  config.py  domain.py  main.py  requirements.txt  types_old.py
uav_optimizer/agents/: __init__.py  base_agent.py  environment.py  evaluator.py  orchestrator.py  planner.py
uav_optimizer/configs/: config.yaml
uav_optimizer/llm/: __init__.py  llama.py
uav_optimizer/optimization/: __init__.py  equation22.py  objective.py  optimizers.py
uav_optimizer/simulator/: __init__.py  channel_model.py  constraints.py  simulator.py
uav_optimizer/tests/: test_objective.py  test_orchestrator.py  test_simulator.py
uav_optimizer/visualization/: plots.py
