[tool.poetry]
name = "uav_framework"
version = "0.1.0"
description = "Multi-agent UAV trajectory optimization prototype"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
numpy = "^1.24"
scipy = "^1.10"
requests = "^2.31"
reportlab = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
